[project]
name = "pyproj"
version = "0.1.0"
description = ""
authors = [
    {name = "Ken Smith",email = "fwxgq.oysqv@fastmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.12.4,<4.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "pytest-mock (>=3.14.1,<4.0.0)"
]

optional-dependencies = {"dev" = ["ruff>=0.11.12"]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
